[fix] Header title gets too big on small screens

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -327,7 +327,7 @@ article header span {
 
 article header h1 {
     margin: 0 auto;
-    font-size: 3.75em;
+    font-size: 5vw;
     font-family: 'Times', 'Georgia', serif;
 }
 
@@ -580,6 +580,12 @@ hr {
     }
 
     article header h1 {
-        font-size: 11vw;
+        font-size: 11vw !important;
+    }
+}
+
+@media (max-width: 640px) {
+    article header h1 {
+        font-size: 8vw;
     }
 }
